<resources>
    <string name="app_name">Laba1</string>
    <string name="enter">Войти</string>
    <string name="createAccount">Создать аккаунт</string>
    <string name="create">Создать</string>
    <string name="recipe">Recipe</string>
    <string name="app">App</string>
    <string name="name">Имя</string>
    <string name="pathName">Фамилия</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="password2">Повторите пароль</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="restorePassword">Восстановить пароль</string>
    <string name="recipes">Рецепты</string>
    <string name="main">Главное</string>
    <string name="favorite">Избранное</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="newRecipes">Новые рецепты</string>
    <string name="ideasForSugar">Идеи для сладкоежек</string>
    <string name="eveningWithGrill">Вечер с грилем</string>
    <string name="salad">Салат с курицей и овощами</string>
    <string name="meat">Крылышки BBQ</string>
    <string name="cheesecakes">Сырники со сметаной</string>
    <string name="cake">Тотр Брауни</string>
    <string name="appleCake">Творожная шарлотка</string>
    <string name="soup">Тыквенный суп со вкусом карри</string>
    <string name="meatballs">Фрикадельки по-шведски</string>
    <string name="classic">Классический чизкейк</string>
    <string name="cesar">Салат Цезарь с чесночным соусом</string>
    <string name="cookies">Имбирное печенье с ванильным сахаром</string>
    <string name="twentyfivemin">25 мин</string>
    <string name="thirtyfivemin">35 мин</string>
    <string name="moreonehour">1ч 45 мин</string>
    <string name="fourportions">4 порции</string>
    <string name="twelvportions">12 порций</string>
    <string name="eightportions">8 порций</string>
    <string name="olaji">Олажьи</string>
    <string name="noOlaji">По запросу “Олажьи” ничего не найдено</string>
    <string name="marija">Мария</string>
    <string name="ivanova">Иванова</string>
    <string name="redacting">Редактировать профиль</string>
    <string name="change">Изменить</string>
    <string name="notifications">Уведомлять о новых блюдах</string>
    <string name="burger">Вегетерианские бургеры с котлетой из чечевицы</string>
    <string name="instruction">Инструкция</string>
    <string name="ingredients">Ингридиенты</string>
    <string name="chechevica1">Отварите чечевицу до готовности: залейте 2 стаканами воды, доведите до кипения, уменьшите огонь и варите 20 минут.</string>
    <string name="chechevica2">Откиньте чечевицу на сито и слейте воду.</string>
    <string name="chechevica3">Главное сами не откиньтесь.</string>
    <string name="mainIngredients">Основное:</string>
    <string name="addIngredients">Дополнительно:</string>
    <string name="ingredient1">6 булочек</string>
    <string name="ingredient2">6 кусочков любого твердого сыра, приготовленного без сычужного фермента</string>
    <string name="ingredient3">6 больших листов салата (например, романо)</string>
    <string name="ingredient4">1-2 помидора</string>
    <string name="ingredient5">70 г соуса BBQ</string>
    <string name="ingredient6">Можно использовать вместо обычных сдобных булочек безглютеновые или из черного хлеба </string>
    <string name="ingredient7">Соус BBQ можно заменить на любой другой по вкусу</string>
    <string name="MariasEmail">marya78@gmail.com</string>
    <string name="MariasPassword">•••••••••</string>
</resources>
