<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ScrollText"
            android:textSize="20dp"
            android:layout_marginVertical="4dp"
            android:text="@string/mainIngredients" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredient1TextView"
                style="@style/ScrollText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ingredient1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circle1ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/circle1ImageView"
                style="@style/StyleForCirclesPoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredient2TextView"
                style="@style/ScrollText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ingredient2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circle2ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/circle2ImageView"
                style="@style/StyleForCirclesPoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredient3TextView"
                style="@style/ScrollText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ingredient3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circle3ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/circle3ImageView"
                style="@style/StyleForCirclesPoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredient4TextView"
                style="@style/ScrollText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ingredient4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circle4ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/circle4ImageView"
                style="@style/StyleForCirclesPoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredient5TextView"
                style="@style/ScrollText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ingredient5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circle5ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/circle5ImageView"
                style="@style/StyleForCirclesPoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/addIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ScrollText"
            android:textSize="20dp"
            android:layout_marginVertical="4dp"
            android:text="@string/addIngredients" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredient6TextView"
                style="@style/ScrollText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ingredient6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circle6ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/circle6ImageView"
                style="@style/StyleForCirclesPoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredient7TextView"
                style="@style/ScrollText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ingredient7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circle7ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/circle7ImageView"
                style="@style/StyleForCirclesPoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/listChoiceIndicatorSingle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>